--- a/dada/templates/advanced_list_search_form.tmpl
+++ b/dada/templates/advanced_list_search_form.tmpl
@@ -1,7 +1,7 @@
 <div id="advanced_list_search">
     <p>&nbsp;</p>
     <div style="max-height: 900px; overflow: auto;">
-        <form id="advanced_list_search_form">
+        <form id="advanced_list_search_form" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->">
             <fieldset> 
                 <legend>Advanced Search</legend>
                 <!-- <a href="#" class="close_advanced_search_list">[x]</a> --> 
