--- a/dada/templates/error_invalid_password_screen.tmpl
+++ b/dada/templates/error_invalid_password_screen.tmpl
@@ -45,6 +45,8 @@
      <input type="hidden" name="flavor" value="login" />
      <input type="hidden" name="admin_list" value="<!-- tmpl_var list_settings.list -->" />
 	 <input type="hidden" name="referer" value="<!-- tmpl_var ENV_SCRIPT_URI -->" /><!-- DEV: perhaps even switch this out with js? --> 
+
+
     <p style="text-align:center">
 
       <input type="password" name="admin_password" id="admin_password" maxlength="24" /> 
@@ -68,6 +70,34 @@
 <form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->"> 
  <input type="hidden" name="flavor" value="email_password" />
  <input type="hidden" name="list" value="<!-- tmpl_var list_settings.list -->" />
+    
+ 	<!-- tmpl_if can_use_captcha --> 
+	    <!-- tmpl_if invalid_captcha --> 
+            <div class="badweatherbox"> 
+    			<p>
+    				<strong>
+    					CAPTCHA Failed. 
+    				</strong>
+    			</p>
+    			<p>Please try again, to solve the CAPTCHA below:</p>
+    		</div> 
+    		
+        <!-- /tmpl_if -->
+	
+		<p> 
+		 Please type in the string of letters that you see in the below image into the text box:
+		</p>
+
+		<!-- tmpl_var CAPTCHA_string --> 
+	<!-- tmpl_else --> 
+		<!-- 
+			<p>
+			Can't use CAPTCHA.
+		</p>
+		-->  
+	<!-- /tmpl_if --> 
+
+
  <p align="center">
   <input type="submit" class="cautionary" value="Reset Your Mailing List Password" />
  </p>
