--- a/dada/templates/change_info_screen.tmpl
+++ b/dada/templates/change_info_screen.tmpl
@@ -90,7 +90,7 @@
 <!-- tmpl_if expr="(using_ses eq '1') && (list_owner_ses_verified ne '1')" --> 
     <div class="badweatherbox">
 	    <p>
-	        Your current <strong>List Owner</strong>, <!-- tmpl_var list_owner_email escape="HTML" --> is not verified through <strong>Amazon SES</strong>.
+	        Your current <strong>List Owner</strong>, <!-- tmpl_var list_owner_email escape="HTML" --> has not been verified through <strong>Amazon SES</strong>.
 	    </p>
 	</div>
 <!-- /tmpl_if --> 
@@ -123,7 +123,7 @@ This address is where Bounced Messages go.
 <!-- tmpl_if expr="(using_ses eq '1') && (list_admin_ses_verified ne '1')" --> 
     <div class="badweatherbox">
 	    <p>
-	        Your current <strong>List Administrator</strong>, <!-- tmpl_var admin_email escape="HTML" --> is not verified through <strong>Amazon SES</strong>.
+	        Your current <strong>List Administrator</strong>, <!-- tmpl_var admin_email escape="HTML" -->has not been verified through <strong>Amazon SES</strong>.
 	    </p>
 	</div>
 <!-- /tmpl_if --> 
