--- a/dada/templates/ses_email_verification_widget.tmpl
+++ b/dada/templates/ses_email_verification_widget.tmpl
@@ -1,7 +1,7 @@
 <!-- tmpl_if expr="(using_ses eq '1') && (list_owner_ses_verified ne '1')" --> 
     <div class="badweatherbox">
 	    <p>
-	        Your current <strong>List Owner</strong>, <!-- tmpl_var list_settings.list_owner_email escape="HTML" --> is not verified through <strong>Amazon SES</strong>.
+	        Your current <strong>List Owner</strong>, <!-- tmpl_var list_settings.list_owner_email escape="HTML" -->has not been verified through <strong>Amazon SES</strong>.
 	        Sending email will not function correctly, until this address is verified.  
 	        <a href="" data-email="<!-- tmpl_var list_settings.list_owner_email escape="HTML" -->" class="amazon_verify_email_in_warning">Click to Verify</a>
 	        </p>
@@ -10,7 +10,7 @@
 <!-- tmpl_if expr="(using_ses eq '1') && (list_admin_ses_verified ne '1')" --> 
     <div class="badweatherbox">
 	    <p>
-	        Your current <strong>List Administrator</strong>, <!-- tmpl_var list_settings.admin_email escape="HTML" --> is not verified through <strong>Amazon SES</strong>.
+	        Your current <strong>List Administrator</strong>, <!-- tmpl_var list_settings.admin_email escape="HTML" -->has not been verified through <strong>Amazon SES</strong>.
 	        Sending email will not function correctly, until this address is verified. 
 	        <a href="" data-email="<!-- tmpl_var list_settings.admin_email escape="HTML" -->" class="amazon_verify_email_in_warning">Click to Verify</a>
 	    </p>
