--- a/dada/templates/ses_email_verification_widget.tmpl
+++ b/dada/templates/ses_email_verification_widget.tmpl
@@ -1,7 +1,11 @@
+<!-- begin ses_email_verification_widget.tmpl --> 
+
+
+
 <!-- tmpl_if expr="(using_ses eq '1') && (list_owner_ses_verified ne '1')" --> 
     <div class="badweatherbox">
 	    <p>
-	        Your current <strong>List Owner</strong>, <!-- tmpl_var list_settings.list_owner_email escape="HTML" -->has not been verified through <strong>Amazon SES</strong>.
+	        Your current <strong>List Owner</strong>, <!-- tmpl_var list_settings.list_owner_email escape="HTML" --> has not been verified through <strong>Amazon SES</strong>.
 	        Sending email will not function correctly, until this address is verified.  
 	        <a href="" data-email="<!-- tmpl_var list_settings.list_owner_email escape="HTML" -->" class="amazon_verify_email_in_warning">Click to Verify</a>
 	        </p>
@@ -10,9 +14,21 @@
 <!-- tmpl_if expr="(using_ses eq '1') && (list_admin_ses_verified ne '1')" --> 
     <div class="badweatherbox">
 	    <p>
-	        Your current <strong>List Administrator</strong>, <!-- tmpl_var list_settings.admin_email escape="HTML" -->has not been verified through <strong>Amazon SES</strong>.
+	        Your current <strong>List Administrator</strong>, <!-- tmpl_var list_settings.admin_email escape="HTML" --> has not been verified through <strong>Amazon SES</strong>.
 	        Sending email will not function correctly, until this address is verified. 
 	        <a href="" data-email="<!-- tmpl_var list_settings.admin_email escape="HTML" -->" class="amazon_verify_email_in_warning">Click to Verify</a>
 	    </p>
 	</div>
 <!-- /tmpl_if -->
+
+<!-- tmpl_if expr="(using_ses eq '1') && (discussion_pop_ses_verified ne '1') && (list_settings.disable_discussion_sending ne '1') && (list_settings.group_list eq '1')" --> 
+    <div class="badweatherbox">
+	    <p>
+	        Your current <strong>List Email</strong>, <!-- tmpl_var list_settings.discussion_pop_email escape="HTML" --> has not been verified through <strong>Amazon SES</strong>.
+	        Sending email will not function correctly, until this address is verified.  
+	        <a href="" data-email="<!-- tmpl_var list_settings.discussion_pop_email escape="HTML" -->" class="amazon_verify_email_in_warning">Click to Verify</a>
+	        </p>
+	</div>
+<!-- /tmpl_if --> 
+
+<!-- end ses_email_verification_widget.tmpl --> 
