--- a/dada/installer-disabled/templates/dada_config.tmpl
+++ b/dada/installer-disabled/templates/dada_config.tmpl
@@ -549,7 +549,14 @@ $ADMIN_MENU = [
 					-Function   => 'list_options',
 					-Activated  => 1,
 					},
-
+					
+				    {
+                        -Title     => 'Web Services API',
+                        -Title_URL => "$S_PROGRAM_URL?f=web_services",
+                        -Function  => 'web_services',
+                        -Activated => 1,
+                    },
+                
 					{
 					-Title      => 'Delete This Mailing List',
 					-Title_URL  => "$S_PROGRAM_URL?f=delete_list",
