--- a/dada/templates/list_options_screen.tmpl
+++ b/dada/templates/list_options_screen.tmpl
@@ -1,7 +1,10 @@
 <!-- begin list_options_screen.tmpl -->
 
 <!-- tmpl_set name="title" value="Your Mailing List &#187; Options" -->
+<!-- tmpl_set name="load_jquery_validate" value="1" -->
+
 <div id="screen_meta" data-menu_highlight="list_options"></div>
+
 <div id="list_options"></div> 
 
 <div id="screentitle"> 
@@ -17,7 +20,7 @@
 
 
 
-<form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" name="default_form" accept-charset="<!-- tmpl_var HTML_CHARSET -->">
+<form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" id="list_options_form" name="list_options_form" accept-charset="<!-- tmpl_var HTML_CHARSET -->">
 
 <fieldset><legend>Mailing List Mode</legend>
 
@@ -486,6 +489,9 @@
                     </label>
                     <br />
                     Send Subscription Notifications to: <!-- tmpl_var send_subscription_notice_to_popup_menu -->
+               	    <input type="text" name="alt_send_subscription_notice_to" id="alt_send_subscription_notice_to" value="<!-- tmpl_var list_settings.alt_send_subscription_notice_to -->" />
+                    
+                    
                	    </p>
                   </td>
                  </tr>
@@ -756,6 +762,7 @@
          </label>
          <br />
          Send Unsubscription Notifications to: <!-- tmpl_var send_unsubscription_notice_to_popup_menu -->
+         <input type="text" name="alt_send_unsubscription_notice_to" id="alt_send_unsubscription_notice_to" value="<!-- tmpl_var list_settings.alt_send_unsubscription_notice_to -->" />
         </p>
        </td>
       </tr>
