That should do it!

--- a/dada/templates/membership_screen.tmpl
+++ b/dada/templates/membership_screen.tmpl
@@ -8,8 +8,10 @@
 
 <div id="screentitle"> 
 	<div id="screentitlepadding">
+	    Membership &#187; 
+	    
 		<a href="<!-- tmpl_var S_PROGRAM_URL -->?f=view_list">
-			Membership
+			View
 		</a>
 		 &#187; <!-- tmpl_var email -->
 	</div>
