--- a/dada/templates/list_template.tmpl
+++ b/dada/templates/list_template.tmpl
@@ -10,12 +10,13 @@
 	
 	<link rel="stylesheet" href="<!-- tmpl_var SUPPORT_FILES_URL -->/static/css/dada_mail.css" type="text/css" media="screen" />
 
-
 	<!-- jQuery -->
 	<script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/jquery-1.8.2.min.js"></script>
 	<script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/jquery.validate.js"></script>
 	<script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/jquery.dadamail.js"></script>
 	<script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/dada_mail.user.js"></script>
+    <!-- tmpl_if comment --><script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script><!-- /tmpl_if -->
+    <script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/jquery-ui-1.9.1.custom.min.js"></script>
 
 	<!-- tmpl_if load_colorbox --> 
 		<link rel="stylesheet" href="<!-- tmpl_var SUPPORT_FILES_URL -->/static/css/colorbox/colorbox.css">
@@ -28,6 +29,9 @@
 	 		<link rel="alternate" type="application/atom+xml" title="Atom" href="<!-- tmpl_var PROGRAM_URL -->/archive_atom/<!-- tmpl_var list_settings.list -->/" />
 		<!-- /tmpl_if --> 
 	<!-- /tmpl_if --> 
+	
+	<link rel="stylesheet" href="<!-- tmpl_var SUPPORT_FILES_URL -->/static/css/jquery-ui-1.9.1.custom.min.css">
+    
 
  </head>
  
