--- a/dada/templates/profile_update_email_error.tmpl
+++ b/dada/templates/profile_update_email_error.tmpl
@@ -5,4 +5,10 @@
 	Something went wrong with the confirmation of your Profile Email Update.
 </p> 
 
+
+<!-- tmpl_loop errors --> 
+   <p>
+    <!-- tmpl_var name -->: <!-- tmpl_var value -->
+   </p>
+<!-- /tmpl_loop -->
 <!-- end profile_update_email_error.tmpl --> 
