--- a/dada/templates/profile_login.tmpl
+++ b/dada/templates/profile_login.tmpl
@@ -5,295 +5,300 @@
 
 <div id="profile_login_registration"></div>
 
-<!-- tmpl_if expr="profile_feature_help == 1" -->
-	<p style="text-align:right">
-		<a href="<!-- tmpl_var PROGRAM_URL -->/profile_help/">
-			What are <!-- tmpl_var PROGRAM_NAME --> Profiles?
-		</a> 
-	</p>
-<!-- /tmpl_if --> 
-
 <!-- tmpl_if removal --> 
-	<div class="clearskiesbox">
-		<p> 
-			Your Profile has been removed.
-		</p> 
-	</div> 
+    <div class="clearskiesbox">
+        <p> 
+            Your Profile has been removed.
+        </p> 
+    </div> 
 <!-- /tmpl_if --> 
 
 <!-- tmpl_if welcome --> 
-	<div class="clearskiesbox">
-		<p>
-			You have been successfully registered! Please log in with your Profile email address and password:
-		</p> 
-	</div> 
-	
+    <div class="clearskiesbox">
+        <p>
+            You have been successfully registered! Please log in with your Profile email address and password:
+        </p> 
+    </div> 
+    
 <!-- /tmpl_if --> 
 
-<!-- 
 
-	<!-- tmpl_if errors --> 
-		<h1>YOU HAVE ERRORS!!!</h1> 
-		<ul>
-		<!-- tmpl_loop errors --> 
-			<li><p><!-- tmpl_var error --></p></li>
-		<!-- /tmpl_loop --> 
-		</ul>
-	<!-- /tmpl_if --> 
-	
-	<h1>error_profile_login: <!-- tmpl_var error_profile_login --> </h1> 
-	<h1>error_profile_register: <!-- tmpl_var error_profile_register --></h1>
-<hr /> 
-<hr /> 
-<hr /> 
+<!-- tmpl_if comment -->
 
---> 
+    <!-- 
+        <!-- tmpl_if errors --> 
+            <h1>YOU HAVE ERRORS!!!</h1> 
+            <ul>
+            <!-- tmpl_loop errors --> 
+                <li><p><!-- tmpl_var error --></p></li>
+            <!-- /tmpl_loop --> 
+            </ul>
+        <!-- /tmpl_if --> 
+    
+        <h1>error_profile_login: <!-- tmpl_var error_profile_login --> </h1> 
+        <h1>error_profile_register: <!-- tmpl_var error_profile_register --></h1>
+    <hr /> 
+    <hr /> 
+    <hr /> 
+
+    --> 
+<!-- /tmpl_if --> 
+
 
 <!-- tmpl_if logged_out --> 
-	<div class="clearskiesbox">
-		<p>
-			Logged out. 
-		</p> 
-	</div> 
+    <div class="clearskiesbox">
+        <p>
+            Logged out. 
+        </p> 
+    </div> 
 <!-- /tmpl_if --> 
 <!-- tmpl_if password_changed --> 
-	<div class="clearskiesbox">
-		<p> 
-			You've successfully changed your Profile password ! Please log in again:
-		</p> 
-	</div> 
+    <div class="clearskiesbox">
+        <p> 
+            You've successfully changed your Profile password ! Please log in again:
+        </p> 
+    </div> 
 <!-- /tmpl_if --> 
 
 
-	<!-- tmpl_if errors --> 
-		<div class="badweatherbox">
-		<p><strong>Problems with your Request</strong></p>
-	<p>Look below for errors concerning your last request.</p> 	
-	<!-- /tmpl_if --> 
+    <!-- tmpl_if errors --> 
+        <div class="badweatherbox">
+        <p><strong>Problems with your Request</strong></p>
+    <p>Look below for errors concerning your last request.</p>     
+    <!-- /tmpl_if --> 
 
 
-	<!-- tmpl_if error_profile_login --> 
-		<ul> 
-			<!-- tmpl_if errors_not_logged_in --> 
-				
-			<!-- /tmpl_if --> 
-			<li>
-				<p>
-					You'll have to log in, before you can access your profile.
-				</p>
-			</li>			
-			<!-- tmpl_if error_unknown_user --> 
-			<li>
-				<p>
-					User Unknown - have you registered?
-				</p>
-			</li>
-			<!-- /tmpl_if --> 
-			<!-- tmpl_if error_incorrect_pass --> 
-			<li>
-				<p>
-					Incorrect Password - double check?
-				</p>
-			</li>
-			<!-- /tmpl_if --> 
-			
-		</ul> 
-	<!-- /tmpl_if --> 
-	<!-- tmpl_if errors --> 
-		</div> 
-	<!-- /tmpl_if --> 
+    <!-- tmpl_if error_profile_activate --> 
+        <div class="badweatherbox">
+        <ul>
+            <!-- tmpl_if error_invalid_auth_code --> 
+                <li>
+                    <p>
+                        Auth code is not valid. Make sure to copy/paste the entire registration link. 
+                    </p> 
+                </li>
+            <!-- /tmpl_if -->        
+        </ul> 
+        </div> 
+    <!-- /tmpl_if --> 
 
-<!-- tmpl_if expr="profile_feature_login == 1" -->
-	<fieldset> 
-		<legend>Log Into Your Profile</legend>
-	
-	<form action="<!-- tmpl_var PROGRAM_URL -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->" id="profile_login"> 
-	
-		<input type="hidden" name="f" value="profile_login" /> 
-		<input type="hidden" name="process" value="1" /> 
-
-		<p>
-			<label for="login_email" style="width: 7em;float: left;text-align: right;margin-right: 0.5em;display: block">
-				Email Address:</label>
-			<input type="email" name="login_email" id="login_email" value="<!-- tmpl_var login_email escape="HTML" -->" /> 
-		</p>
-		<p>
-			<label for="login_password" style="width: 7em;float: left;text-align: right;margin-right: 0.5em;display: block">
-				Password:
-			</label>
-			<input type="password" name="login_password" id="login_password" value="" /> 
-
-		<div class="buttonfloat">
-			<input type="submit" value="Log Into Your Profile" /> 
-		</div>
-		<div class="floatclear"></div>
-
-	</form> 
-
-	</fieldset> 
-
-<!-- /tmpl_if --> 
+    <!-- tmpl_if error_profile_register --> 
+        <div class="badweatherbox">
+        <ul> 
+            <!-- tmpl_if error_invalid_email -->
+            <li>
+                <p>
+                    The email address you've entered is not valid.
+                </p> 
+            </li>        
+            <!-- /tmpl_if --> 
+            <!-- tmpl_if error_password_blank --> 
+                <li>
+                    <p>
+                        You forgot to enter a password.
+                    </p> 
+                </li>
+            <!-- /tmpl_if --> 
+            <!-- tmpl_if error_email_no_match --> 
+            <li>
+                <p>
+                    The email addresses you've entered do not match.
+                </p> 
+            </li>        
+            <!-- /tmpl_if --> 
+            <!-- tmpl_if error_captcha_failed --> 
+            <li>
+                <p>
+                    CAPTCHA Failed. 
+                </p> 
+            </li>
+            <!-- /tmpl_if --> 
+        </ul> 
+        </div> 
+    <!-- /tmpl_if --> 
 
 
-<!-- tmpl_if error_profile_activate --> 
-	<div class="badweatherbox">
-	<ul>
-		<!-- tmpl_if error_invalid_auth_code --> 
-			<li>
-				<p>
-					Auth code is not valid. Make sure to copy/paste the entire registration link. 
-				</p> 
-			</li>
-		<!-- /tmpl_if -->		
-	</ul> 
-	</div> 
-<!-- /tmpl_if --> 
+    <!-- tmpl_if error_profile_login --> 
+        <ul> 
+            <!-- tmpl_if errors_not_logged_in --> 
+                
+            <!-- /tmpl_if --> 
+            <li>
+                <p>
+                    You'll have to log in, before you can access your profile.
+                </p>
+            </li>            
+            <!-- tmpl_if error_unknown_user --> 
+            <li>
+                <p>
+                    User Unknown - have you registered?
+                </p>
+            </li>
+            <!-- /tmpl_if --> 
+            <!-- tmpl_if error_incorrect_pass --> 
+            <li>
+                <p>
+                    Incorrect Password - double check?
+                </p>
+            </li>
+            <!-- /tmpl_if --> 
+            
+        </ul> 
+    <!-- /tmpl_if --> 
+    <!-- tmpl_if errors --> 
+        </div> 
+    <!-- /tmpl_if --> 
 
-<!-- tmpl_if error_profile_register --> 
-	<div class="badweatherbox">
-	<ul> 
-		<!-- tmpl_if error_invalid_email -->
-		<li>
-			<p>
-				The email address you've entered is not valid.
-			</p> 
-		</li>		
-		<!-- /tmpl_if --> 
-		<!-- tmpl_if error_password_blank --> 
-			<li>
-				<p>
-					You forgot to enter a password.
-				</p> 
-			</li>
-		<!-- /tmpl_if --> 
-		<!-- tmpl_if error_email_no_match --> 
-		<li>
-			<p>
-				The email addresses you've entered do not match.
-			</p> 
-		</li>		
-		<!-- /tmpl_if --> 
-		<!-- tmpl_if error_captcha_failed --> 
-		<li>
-			<p>
-				CAPTCHA Failed. 
-			</p> 
-		</li>
-		<!-- /tmpl_if --> 
-	</ul> 
-	</div> 
+    <!-- tmpl_if error_profile_reset_password --> 
+        <div class="badweatherbox">
+            <ul>
+                <!-- tmpl_if error_invalid_auth_code --> 
+                    <li>
+                        <p>
+                            Auth code is not valid. Make sure to copy/paste the entire password reset link. 
+                        </p>
+                    </li> 
+                <!-- /tmpl_if --> 
 
-<!-- /tmpl_if --> 
+                <!-- tmpl_if error_unknown_user --> 
+                    <li>
+                        <p>
+                            User Unknown - have you registered?
+                        </p>
+                    </li> 
+                <!-- /tmpl_if -->
 
-<!-- tmpl_if expr="profile_feature_register == 1" -->
+            </ul> 
+        </div> 
+    <!-- /tmpl_if --> 
 
-	<fieldset> 
-	<legend>
-		Register for a New <!-- tmpl_var PROGRAM_NAME --> Profile
-	</legend> 
-
-	<p>
-		Register a Profile to easily manage all your <!-- PROGRAM_NAME --> Subscriptions.
-	</p> 
-
-	<form action="<!-- tmpl_var PROGRAM_URL -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->" id="profile_register"> 
-		<input type="hidden" name="f" value="profile_register" /> 
-		<p>
-			<label for="register_email" style="width: 7em;float: left;text-align: right;margin-right: 0.5em;display: block">
-				Email Address:
-			</label>
-			<input type="email" name="register_email" id="register_email" value="<!-- tmpl_var register_email -->" /> 
-		</p>
-		<p>
-			<label for="register_email_again" style="width: 7em;float: left;text-align: right;margin-right: 0.5em;display: block">
-				Email Address (again):
-			</label>
-			<input type="email" name="register_email_again" id="register_email_again" value="<!-- tmpl_var register_email_again -->" /> 
-		</p>
-		<p>
-			<label for="register_password" style="width: 7em;float: left;text-align: right;margin-right: 0.5em;display: block">
-				Password:
-			</label>
-			<input type="password" name="register_password" id="register_password" value="" /> 
-		</p>
-	
-		<!-- tmpl_if can_use_captcha --> 
-			<p> 
-			 Please type in the string of letters that you see in the below image into the text box:
-			</p>
-	
-			<!-- tmpl_var CAPTCHA_string --> 
-		<!-- tmpl_else --> 
-			<!-- 
-				<p>
-				Can't use CAPTCHA.
-			</p>
-			-->  
-		<!-- /tmpl_if --> 
-	
-	
-		<div class="buttonfloat">	
-			<input type="submit" value="Register a New Profile" /> 
-		</div>
-		<div class="floatclear"></div>
-		
-	</form> 
-
-	</fieldset> 
-<!-- /tmpl_if --> 
+  
+     <div class="clearskiesbox"> 
+         <p>
+             <!-- tmpl_var PROGRAM_NAME --> Profiles allow you to view and work with all 
+             your <!-- tmpl_var PROGRAM_NAME --> subscriptions.
+         </p>
+     
+         <p>
+             Having a profile and being logged in also allows you to view subscriber-only archives.
+         </p>
+     </div> 
 
 
-<!-- tmpl_if error_profile_reset_password --> 
-	<div class="badweatherbox">
-		<ul>
-			<!-- tmpl_if error_invalid_auth_code --> 
-				<li>
-					<p>
-						Auth code is not valid. Make sure to copy/paste the entire password reset link. 
-					</p>
-				</li> 
-			<!-- /tmpl_if --> 
-			
-			<!-- tmpl_if error_unknown_user --> 
-				<li>
-					<p>
-						User Unknown - have you registered?
-					</p>
-				</li> 
-			<!-- /tmpl_if -->
-			
-		</ul> 
-	</div> 
-<!-- /tmpl_if --> 
+<div id="tabs"> 
+    <ul> 
+        <!-- tmpl_if expr="profile_feature_login == 1" -->
+            <li>
+                <a href="#profile_login">Login</a>
+            </li>
+        <!-- /tmpl_if -->
+        
+        <!-- tmpl_if expr="profile_feature_password_reset == 1" --> 
+            <li>
+                <a href="#profile_password_reset">Reset Password</a>
+            </li>        
+        <!-- /tmpl_if -->
+        <!-- tmpl_if expr="profile_feature_register == 1" -->
+            <li>
+                <a href="#profile_register">Register</a>
+            </li>
+        <!-- /tmpl_if -->
+    </ul>
+    
+    <!-- tmpl_if expr="profile_feature_login == 1" -->
+    <div id="profile_login">
+           
+        <form action="<!-- tmpl_var PROGRAM_URL -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->" id="profile_login"> 
+            <input type="hidden" name="f" value="profile_login" /> 
+            <input type="hidden" name="process" value="1" /> 
+            <p>
+                <label for="login_email" style="width: 9em;float: left;text-align: right;margin-right: 0.5em;display: block">
+                    Email Address:</label>
+                <input type="email" name="login_email" id="login_email" value="<!-- tmpl_var login_email escape="HTML" -->" /> 
+            </p>
+            <p>
+                <label for="login_password" style="width: 9em;float: left;text-align: right;margin-right: 0.5em;display: block">
+                    Password:
+                </label>
+                <input type="password" name="login_password" id="login_password" value="" /> 
 
+            <div class="buttonfloat">
+                <input type="submit" value="Log Into Your Profile" /> 
+            </div>
+            <div class="floatclear"></div>
+        </form>
+    </div>
+    <!-- /tmpl_if -->
+    
+    <!-- tmpl_if expr="profile_feature_password_reset == 1" -->
+        <div id="profile_password_reset">
+        <form action="<!-- tmpl_var PROGRAM_URL -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->" id="profile_reset_password"> 
+            <input type="hidden" name="f" value='profile_reset_password' /> 
+            <p>
+                <label for="reset_email" style="width: 9em;float: left;text-align: right;margin-right: 0.5em;display: block">
+                    Email Address:
+                </label>
+                 <input type="text" id="reset_email" name="reset_email" value="<!-- tmpl_var reset_email -->" />
+            </p> 
+            <div class="buttonfloat">    
+                <input type="submit" value="Reset Your Profile Password" /> 
+            </div>
+            <div class="floatclear"></div>
+        </form>
+        </div> 
+    <!-- /tmpl_if --> 
+    
+    
+    <!-- tmpl_if expr="profile_feature_register == 1" -->
+        <div id="profile_register">
+            <p>
+                Register a Profile to easily manage all your <!-- PROGRAM_NAME --> Subscriptions.
+            </p> 
 
-<!-- tmpl_if expr="profile_feature_password_reset == 1" -->
+            <form action="<!-- tmpl_var PROGRAM_URL -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->" id="profile_register"> 
+                <input type="hidden" name="f" value="profile_register" /> 
+                <p>
+                    <label for="register_email" style="width: 9em;float: left;text-align: right;margin-right: 0.5em;display: block">
+                        Email Address:
+                    </label>
+                    <input type="email" name="register_email" id="register_email" value="<!-- tmpl_var register_email -->" /> 
+                </p>
+                <p>
+                    <label for="register_email_again" style="width: 9em;float: left;text-align: right;margin-right: 0.5em;display: block">
+                        Email Address (again):
+                    </label>
+                    <input type="email" name="register_email_again" id="register_email_again" value="<!-- tmpl_var register_email_again -->" /> 
+                </p>
+                <p>
+                    <label for="register_password" style="width: 9em;float: left;text-align: right;margin-right: 0.5em;display: block">
+                        Password:
+                    </label>
+                    <input type="password" name="register_password" id="register_password" value="" /> 
+                </p>
 
-	<fieldset> 
-	<legend>
-		Forgot Your Profile Password?
-	</legend>
+                <!-- tmpl_if can_use_captcha --> 
+                    <p> 
+                     Please type in the string of letters that you see in the below image into the text box:
+                    </p>
 
-	<form action="<!-- tmpl_var PROGRAM_URL -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->" id="profile_reset_password"> 
-		<input type="hidden" name="f" value='profile_reset_password' /> 
-		<p>
-			<label for="reset_email" style="width: 7em;float: left;text-align: right;margin-right: 0.5em;display: block">
-				Email Address:
-			</label>
-			 <input type="text" id="reset_email" name="reset_email" value="<!-- tmpl_var reset_email -->" />
-		</p> 
-	
+                    <!-- tmpl_var CAPTCHA_string --> 
+                <!-- tmpl_else --> 
+                    <!-- 
+                        <p>
+                        Can't use CAPTCHA.
+                    </p>
+                    -->  
+                <!-- /tmpl_if --> 
 
-		<div class="buttonfloat">	
-			<input type="submit" value="Reset Your Profile Password" /> 
-		</div>
-		<div class="floatclear"></div>
+                <div class="buttonfloat">    
+                    <input type="submit" value="Register a New Profile" /> 
+                </div>
+                <div class="floatclear"></div>
 
-	</form>
+            </form> 
+        </div> 
+    <!-- /tmpl_if -->
 
-	</fieldset> 
-<!-- /tmpl_if --> 
-
-
+</div>
 
 <!-- end profile_login.tmpl --> 
