--- a/dada/templates/send_a_list_message_button_widget.tmpl
+++ b/dada/templates/send_a_list_message_button_widget.tmpl
@@ -3,17 +3,24 @@
 
 <!-- tmpl_if draft_enabled -->
 	<!-- tmpl_unless expr="(mass_mailing_type eq 'invite')" -->
+	
+	    <input type="hidden" name="default_save_draft_button_label" id="default_save_draft_button_label" value="Save as: Draft" />
     	<!-- tmpl_if expr="(draft_role eq 'stationary')" -->
     		<input type="button" class="bigger_button processing savedraft" name="process" value="Save Stationary"  data-role="stationary" id="save_stationary_button"  />
-            <input type="button" class="bigger_button processing create_from_stationary" name="process" value="+ Create New Message From Stationary"  data-role="stationary" />
+            <input type="button" class="bigger_button processing create_from_stationary" name="process" value="New Draft From Stationary"  data-role="stationary" />
             or <a href="#"       class="cancel_message" id="delete_stationary_link">Delete Stationary</a>
-        <!-- tmpl_else --> 
-        	<!-- tmpl_if draft_id --> 
-        	    <input type="button" class="bigger_button processing savedraft" name="process" value="Save Draft"       data-role="draft" id="save_draft_button" />
-        	<!-- tmpl_else --> 
-    	        <input type="button" class="bigger_button processing savedraft" name="process" value="Save as: Draft"       data-role="draft" id="save_as_draft_button" />       	
-        	<!-- /tmpl_if --> 
-        	<input type="button" class="bigger_button processing savedraft" name="process" value="Save as: Stationary"  data-role="stationary" id="save_as_stationary_button" />
+        <!-- /tmpl_if -->
+        <!-- tmpl_if expr="(draft_role eq 'schedule')" -->
+            <input type="button" class="bigger_button processing savedraft" name="process" value="Save Schedule"  data-role="schedule" id="save_schedule_button"  />
+            or <a href="#"       class="cancel_message" id="delete_schedule_link">Delete Schedule</a>
+        <!-- /tmpl_if -->
+        <!-- tmpl_if expr="(draft_role eq 'draft')" -->
+            <!-- tmpl_if draft_id --> 
+                <input type="button" class="bigger_button processing savedraft" name="process" value="Save Draft"       data-role="draft" id="save_draft_button" />
+            <!-- tmpl_else --> 
+                <input type="button" class="bigger_button processing savedraft" name="process" value="Save as: Draft"       data-role="draft" id="save_draft_button" />       	
+            <!-- /tmpl_if -->             
+            <input type="button" class="bigger_button processing savedraft" name="process" value="Save as: Stationary"  data-role="stationary" id="save_as_stationary_button" />
             or <a href="#"       class="cancel_message" id="cancel_message_link">Cancel Message</a>
         <!-- /tmpl_if --> 
     <!-- /tmpl_unless -->
@@ -22,9 +29,15 @@
 
 
     <input type="submit" class="bigger_button processing sendmassmailing justatest"  name="process" id="submit_test_mailing" value="<!-- tmpl_if expr="(mass_mailing_type eq 'invite')" -->Send: Test Invitation<!-- tmpl_else -->Send: Test Message<!-- /tmpl_if -->" />    
-<!-- tmpl_if expr="(draft_role ne 'stationary')" -->
-        <input type="submit" class="bigger_button cautionary sendmassmailing"            name="process" id="submit_mass_mailing" value="<!-- tmpl_if expr="(mass_mailing_type eq 'invite')" -->Send: Invitations<!-- tmpl_else -->Send: Mass Mailing<!-- /tmpl_if -->" />
-        <input type="hidden" id="default_mass_mailing_button_label" name="default_mass_mailing_button_label" value="<!-- tmpl_if expr="(mass_mailing_type eq 'invite')" -->Send: Invitations<!-- tmpl_else -->Send: Mass Mailing<!-- /tmpl_if -->" />
+<!-- tmpl_if expr="(draft_role ne 'stationary') && (draft_role ne 'schedule')" -->
+        <input type="submit" class="bigger_button cautionary sendmassmailing"            name="process" id="submit_mass_mailing"  value="<!-- tmpl_if expr="(mass_mailing_type eq 'invite')" -->Send: Invitations<!-- tmpl_else -->Send: Mass Mailing<!-- /tmpl_if -->" />
+        <input type="hidden" id="default_mass_mailing_button_label"                      name="default_mass_mailing_button_label" value="<!-- tmpl_if expr="(mass_mailing_type eq 'invite')" -->Send: Invitations<!-- tmpl_else -->Send: Mass Mailing<!-- /tmpl_if -->" />
+
+        <!-- tmpl_unless expr="(mass_mailing_type eq 'invite')" -->
+            <input type="submit" class="bigger_button cautionary schedulemassmailing"            name="process" id=""  value="Schedule..." />
+        <!-- /tmpl_unless -->
+        
+
 <!-- /tmpl_if --> 
 
 	<span id="button_action_notice" class="alert">
