Rejiggering MassSend.pm for Send via URL

--- a/dada/installer-disabled/templates/dada_config.tmpl
+++ b/dada/installer-disabled/templates/dada_config.tmpl
@@ -462,7 +462,7 @@ $ADMIN_MENU = [
 					},
 
 					{
-					-Title     => 'Drafts and Stationary',
+					-Title     => 'Drafts/Stationary/Schedules',
 					-Title_URL => "$S_PROGRAM_URL?f=drafts",
 					-Function  => 'drafts',
 					-Activated => 1,
