--- a/dada/templates/send_email_schedule_options_widget.tmpl
+++ b/dada/templates/send_email_schedule_options_widget.tmpl
@@ -2,8 +2,8 @@
 
 
     <p>
-        <input type="checkbox" name="scheduled_mailing" id="scheduled_mailing" value="1" class="" />
-        <label for="scheduled_mailing">
+        <input type="checkbox" name="schedule_activated" id="schedule_activated" value="1" class="" />
+        <label for="schedule_activated">
             Activate
         </label></p>
         
