--- a/dada/templates/send_email_screen.tmpl
+++ b/dada/templates/send_email_screen.tmpl
@@ -31,6 +31,7 @@
 
 <!-- tmpl_if expr="(draft_role eq 'schedule')" -->
     <fieldset>
+        <legend>Scheduling Options</legend>
     <!-- tmpl_include send_email_schedule_options_widget.tmpl -->
     </fieldset>
 <!-- /tmpl_if -->
