--- a/dada/templates/send_a_list_message_button_widget.tmpl
+++ b/dada/templates/send_a_list_message_button_widget.tmpl
@@ -34,7 +34,7 @@
         <input type="hidden" id="default_mass_mailing_button_label"                      name="default_mass_mailing_button_label" value="<!-- tmpl_if expr="(mass_mailing_type eq 'invite')" -->Send: Invitations<!-- tmpl_else -->Send: Mass Mailing<!-- /tmpl_if -->" />
 
         <!-- tmpl_unless expr="(mass_mailing_type eq 'invite')" -->
-            <input type="submit" class="bigger_button cautionary schedulemassmailing"            name="process" id=""  value="Schedule..." />
+            <input type="submit" class="bigger_button cautionary savedraft"      data-role="schedule"      name="process" id=""  value="Schedule..." />
         <!-- /tmpl_unless -->
         
 
